[gd_scene load_steps=4 format=3 uid="uid://d3kw01beky43i"]

[ext_resource type="Script" path="res://Scripts/UI/equipment_slot.gd" id="1_1882k"]
[ext_resource type="Texture2D" uid="uid://d4iopmfamhbth" path="res://Assets/Graphics/Ui/Dialog/FacesetBox.png" id="1_c84v1"]
[ext_resource type="Theme" uid="uid://cksxks7axtpf0" path="res://Resources/Ui/fontStyle.tres" id="3_j2utf"]

[node name="EquipmentSlot" type="VBoxContainer"]
offset_right = 65.0
offset_bottom = 87.0
script = ExtResource("1_1882k")

[node name="Background" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_c84v1")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="AmountLabel" type="Label" parent="Background"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_j2utf")
text = "1"
horizontal_alignment = 2

[node name="SlotContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="Background/SlotContainer"]
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="EquipLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("3_j2utf")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 13
text = "R  HAND"
horizontal_alignment = 1
